# AgentSwarm-Multi-Agent-Orchestration-with-Council-Research-and-Security-Agents

./: .gitignore  README.md  pyproject.toml
config/: default.json
docs/: ARCHITECTURE.md  METRICS.md  PUBLICATION.md  PUBLICATION.tex  SOURCES.md  SYSTEM_PROMPTS.md
examples/: sample_output.json  task_objective.txt
prompts/: system_prompts.json
runs/: metrics.json  mock_workflow_result.json
src/context_optimized_agents/: __init__.py  agents.py  auditor.py  budgets.py  cli.py  diagrams.py  llm.py  memory.py  metrics.py  orchestrator.py  prompts.py  router.py  schemas.py  utils.py
tests/: test_orchestrator.py  test_router.py
