[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-optimized-agents"
version = "0.1.0"
description = "Context-optimized multi-agent orchestration with scoped routing, budgets, compression, security review, and metrics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Context Optimized Agents Project"}]
keywords = ["agents", "orchestration", "context-management", "llm", "openai", "gpt-5.5"]
dependencies = []

[project.optional-dependencies]
live = ["openai>=1.90.0"]
diagram = ["matplotlib>=3.8.0"]
tokens = ["tiktoken>=0.7.0"]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]
all = ["openai>=1.90.0", "matplotlib>=3.8.0", "tiktoken>=0.7.0"]

[project.scripts]
coa = "context_optimized_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
context_optimized_agents = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
